# GraphEvolutionTool

./: .gitignore  Cargo.toml  EEOPS.cpp  EEOPS.h  Evolver.cpp  Evolver.h  GET.cpp  Graph.cpp  Graph.h  GraphTest.cpp  LICENSE  Planning Notes.md  README.md  README.txt  SDA.h  config.h  run.cpp
GET/: EEOPS.cpp  EEOPS.h  Evolver.cpp  Evolver.h  GET.cpp  GET.h  Graph.cpp  Graph.h  Representation.h  SDA.cpp  SDA.h
get/: Cargo.toml
get/src/: graph.rs  lib.rs
get/src/genomes/: edge_edit.rs  genome.rs  mod.rs  sda.rs
get/src/genomes/edge_edit/: operations.rs
